--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "prop-types": "^15.7.2",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
   },
@@ -15,8 +16,34 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/",
+    "precommit": "lint-staged"
   },
+  "devDependencies": {
+    "classnames": "^2.2.6",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "material-design-icons-iconfont": "^6.1.0",
+    "nanoid": "^3.1.20",
+    "ncu": "^0.2.1",
+    "prettier": "^1.14.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn precommit"
+    }
+  },
+  "lint-staged": {
+    "*.{js, jsx}": [
+      "eslint --max-warnings=0",
+      "prettier --write",
+      "git add ."
+    ]
+  },
+  "homepage": "https://i-hit.github.io/ra-3.2",
   "eslintConfig": {
     "extends": [
       "react-app",
